syntax = "proto3";

package pricing;

service Prices {
    rpc GetItemPrice (ItemPriceRequest) returns (ItemPriceResponse);
}

message ItemPriceRequest {
    int32 RegionId = 1;
    int32 ItemId = 2;
}

message ItemPriceResponse {
    Item Item = 1;
}

message Item {
    int32 ItemId = 1;
    ItemPrice Buy = 2;
    ItemPrice Sell = 3;
}

message ItemPrice {
    double Min = 1;
    double Max = 2;
    double Avg = 3;
    int64 Vol = 4;
    int64 Ord = 5;
}

